--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/utilities.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/utilities.css">
     <title>Beta Solutions</title>
 </head>
 <body id="home">
