--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <div class="double-flex-column">    
                 <div class="double-flex-item flex-pic">
-                    <img src="../onemoretry/img/project1.jpg" alt="">
+                    <img src="../img/project1.jpg" alt="">
                 </div>
             </div>    
         </div>
@@ -116,17 +116,17 @@
 
         <div class="triple-flex">
             <div class="triple-flex-item">
-                <img src="../onemoretry/img/person1.jpg" alt="">
+                <img src="../img/person1.jpg" alt="">
                 <h4>Laura Perry</h4>
                 <p>Chief Executive Officer</p>
             </div>
             <div class="triple-flex-item">
-                <img src="../onemoretry/img/person2.jpg" alt="">
+                <img src="../img/person2.jpg" alt="">
                 <h4>John McMilann</h4>
                 <p>Chief Technology Officer</p>
             </div>
             <div class="triple-flex-item">
-                <img src="../onemoretry/img/person3.jpg" alt="">
+                <img src="../img/person3.jpg" alt="">
                 <h4>Sophia Stone</h4>
                 <p>Chief Operations Officer</p>
             </div>
@@ -147,7 +147,7 @@
 
             <div class="double-flex-column flex-pic">    
                 <div class="double-flex-item">
-                    <img src="../onemoretry/img/project2.jpg" alt="">
+                    <img src="../img/project2.jpg" alt="">
                 </div>
             </div>    
         </div>
@@ -210,7 +210,7 @@
 
             <div class="double-flex-column">    
                 <div class="double-flex-item flex-pic">
-                    <img src="../onemoretry/img/contact.jpg" alt="">
+                    <img src="../img/contact.jpg" alt="">
                 </div>
             </div>    
         </div>
